--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -352,3 +352,7 @@ pages:
     home:
         title: "Homepage"
         logged_as: "You are logged in as"
+
+requetes:
+    title: "Query interface"
+    list: "Queries"
