Enregistrement de requêtes en cours

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -361,3 +361,5 @@ requetes:
     type_donnee: "Data type"
     critere: "Requirements"
     champs_afficher: "Fields to display"
+    et: "And"
+    ou: "Or"
