Ajout des boutons 'et/ou', traduction complète en anglais, listes dynamiques OP

--- a/translations/messages.en.yaml
+++ b/translations/messages.en.yaml
@@ -363,3 +363,18 @@ requetes:
     champs_afficher: "Fields to display"
     et: "And"
     ou: "Or"
+    nomBDD: "en"
+    tab_choix:
+        est_vrai: "Is true"
+        est_faux: "Is false"
+        est_nul: "Is nul"
+        contient: "Contain"
+        contient_pas: "Does not contain"
+        commence_par: "Start with"
+        finit_par: "End with"
+        est_vide: "Is empty"
+        est_egal: "Equate to"
+        est_different: "Differ from"
+        plus_grand: "Greather than"
+        plus_petit: "Smaller than"
+        egal_a: "Is equal to"
