--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -363,3 +363,18 @@ requetes:
     champs_afficher: "Champs à afficher"
     et: "Et"
     ou: "Ou"
+    nomBDD: "fr"
+    tabChoix:
+        est_vrai: "Est vrai"
+        est_faux: "Est faux"
+        est_nul: "Est nul"
+        contient: "Contient"
+        contient_pas: "Ne contient pas"
+        commence_par: "Commence par"
+        finit_par: "Finit par"
+        est_vide: "Est vide"
+        est_egal: "Est égal à"
+        est_different: "Est différent de"
+        plus_grand: "Plus grand que"
+        plus_petit: "Plus petit que"
+        egal_a: "Égal à"
