Enregistrement OP, chargement de requêtes OP, execute requete en cours

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -364,7 +364,7 @@ requetes:
     et: "Et"
     ou: "Ou"
     nomBDD: "fr"
-    tabChoix:
+    tab_choix:
         est_vrai: "Est vrai"
         est_faux: "Est faux"
         est_nul: "Est nul"
